overflow auto fix

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,7 @@ html,body {
     font-family: 'Pangolin', cursive;
     font-family: 'Permanent Marker', cursive;
     justify-content: center;
-/*     margin: 0; 
-    height: 100%; 
-    overflow: hidden; */
+    overflow:auto;
 }
 
 #main {
